--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
 [submodule "ROS/src/ros_tcp_endpoint"]
 	path = ROS/src/ros_tcp_endpoint
 	url = https://github.com/Unity-Technologies/ROS-TCP-Endpoint.git
+[submodule "ROS/src/robotiq"]
+	path = ROS/src/robotiq
+	url = https://github.com/JStech/robotiq.git
+	branch = noetic-mods
