--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "ROS/src/robotiq"]
-	path = ROS/src/robotiq
-	url = https://github.com/ros-industrial/robotiq.git
 [submodule "ROS/src/universal_robot"]
 	path = ROS/src/universal_robot
 	url = https://github.com/ros-industrial/universal_robot
@@ -10,3 +7,7 @@
 [submodule "ROS/src/ros_tcp_endpoint"]
 	path = ROS/src/ros_tcp_endpoint
 	url = https://github.com/Unity-Technologies/ROS-TCP-Endpoint.git
+[submodule "ROS/src/robotiq"]
+	path = ROS/src/robotiq
+	url = https://github.com/JStech/robotiq.git
+	branch = noetic-mods
