--- a/PoseEstimationDemoProject/Packages/manifest.json
+++ b/PoseEstimationDemoProject/Packages/manifest.json
@@ -6,8 +6,8 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.perception": "0.7.0-preview.2",
     "com.unity.render-pipelines.universal": "10.2.2",
-    "com.unity.robotics.ros-tcp-connector": "https://github.com/Unity-Technologies/ROS-TCP-Connector.git#v0.1.2",
-    "com.unity.robotics.urdf-importer": "https://github.com/Unity-Technologies/URDF-Importer.git#v0.1.2",
+    "com.unity.robotics.ros-tcp-connector": "https://github.com/Unity-Technologies/ROS-TCP-Connector.git?path=/com.unity.robotics.ros-tcp-connector#v0.2.0",
+    "com.unity.robotics.urdf-importer": "https://github.com/Unity-Technologies/URDF-Importer.git?path=/com.unity.robotics.urdf-importer#v0.2.0",
     "com.unity.test-framework": "1.1.20",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.4.4",
