updated perception package version

--- a/PoseEstimationDemoProject/Packages/manifest.json
+++ b/PoseEstimationDemoProject/Packages/manifest.json
@@ -4,13 +4,15 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.5",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.perception": "0.7.0-preview.2",
+    "com.unity.perception": "0.8.0-preview.3",
     "com.unity.render-pipelines.universal": "10.3.1",
-    "com.unity.robotics.ros-tcp-connector": "https://github.com/Unity-Technologies/ROS-TCP-Connector.git?path=/com.unity.robotics.ros-tcp-connector#v0.2.0",
-    "com.unity.robotics.urdf-importer": "https://github.com/Unity-Technologies/URDF-Importer.git?path=/com.unity.robotics.urdf-importer#v0.2.0",
+    "com.unity.robotics.ros-tcp-connector": "file:ROS-TCP-Connector/com.unity.robotics.ros-tcp-connector",
+    "com.unity.robotics.urdf-importer": "file:URDF-Importer/com.unity.robotics.urdf-importer",
+    "com.unity.simulation.capture": "0.0.10-preview.21",
     "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.4.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.19-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
