--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 	path = ROS/src/robotiq
 	url = https://github.com/JStech/robotiq.git
 	branch = noetic-mods
+[submodule "PoseEstimationDemoProject/Packages/ROS-TCP-Connector"]
+	path = PoseEstimationDemoProject/Packages/ROS-TCP-Connector
+	url = https://github.com/Unity-Technologies/ROS-TCP-Connector.git
